# thapthim

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  THIRD_PARTY_NOTICES.md  pyproject.toml  thapthim-0.1.0.gem  thapthim.gemspec
datasets/: README.md
docs/: ARCHITECTURE.md  BENCHMARKS.md
ext/thapthim/: Cargo.toml  build.rs  extconf.rb
ext/thapthim/assets/: char_entropy.txt  kn_syllables_unigrams.txt  kn_tccs_bigrams.txt  kn_tccs_unigrams.txt  kn_words_unigrams.txt  master_syllables_vocab.txt
ext/thapthim/examples/: build_interned_lm.rs
ext/thapthim/src/: lattice.rs  lib.rs  lm_format.rs  normalize.rs  python.rs  tcc.rs
ext/thapthim/src/lattice/: decode.rs  entropy.rs  grid.rs  mod.rs  scoring.rs
lib/: thapthim.rb
lib/thapthim/: normalize_std.rb  normalize_tis.rb  segment.rb  segment_tcc.rb  segment_tcc_legacy.rb  thapthim.bundle  tis_table.rb  valid_tis.rb  version.rb
sig/: thapthim.rbs
spec/: spec_helper.rb  thapthim_spec.rb
test/: benchmark_accuracy.py  benchmark_baselines.py  benchmark_speed.py  benchmark_speed.rb  dump_segmentation.rb  eval_oov.rb  eval_oov_compare.py  eval_segment.rb  test_ffi_safety.rb  test_input_hardening.rb  test_performance.rb  test_segment.rb  test_segment_tcc.rb  test_std_normalize.rb  test_tcc_invariants.rb
tools/: build_char_entropy.rb  tune_knobs.rb
