[package]
name = "thapthim"
version = "0.1.0"
edition = "2024"

[lib]
name = "thapthim"
crate-type = ["cdylib"]

[dependencies]
regex = "1.10"
daachorse = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rustc-hash = "1.1" # Incredibly fast lookup hashes optimized for compiler/NLP tokens

[build-dependencies]
rb-sys = "0.9" # Standard cross-boundary system wrapper