[package]
name = "thapthim"
version = "0.1.0"
edition = "2024"

[lib]
name = "thapthim"
# cdylib for the Ruby FFI; rlib so the `build_interned_lm` example can link the crate.
crate-type = ["cdylib", "rlib"]

[features]
# Off by default: the alternate BEST-trained LM (assets/joint_lm_interned_best.bin) is kept in the
# repo for experiments but NOT embedded into the shipped binary. Build with `--features best_lm`
# (and run with THAPTHIM_LM=best) to evaluate it. Keeps the default gem ~11MB smaller.
best_lm = []

[dependencies]
regex = "1.10"
daachorse = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rustc-hash = "1.1" # Incredibly fast lookup hashes optimized for compiler/NLP tokens

[build-dependencies]
rb-sys = "0.9" # Standard cross-boundary system wrapper
serde = { version = "1.0", features = ["derive"] } # build.rs re-encodes the LM to the interned asset
bincode = "1.3"